feat: :sparkles: backend integrated external apis
