# backend/src/app/@types/IGetCityDetailsResponse.ts
@@ -1,0 +1,9 @@
+import { IExchangeApiResponse } from "../interfaces/IExchangeApi";
+import { IWeatherApiResponse } from "../interfaces/IOpenWeatherApi";
+import { IGetOpenBankDataByCountryResponse } from "./IGetOpenBankDataByCountryResponse";
+
+export interface IGetCityDetailsResponse
+  extends IGetOpenBankDataByCountryResponse {
+  weather: IWeatherApiResponse
+  exchange: IExchangeApiResponse
+}
