# backend/src/app/@types/IGetOpenBankDataByCountryResponse.ts
@@ -1,0 +1,6 @@
+import { IBankApiResponse } from "../interfaces/IOpenBankDataApi";
+
+export interface IGetOpenBankDataByCountryResponse {
+  pibPerCapitalData: IBankApiResponse
+  populationData: IBankApiResponse
+}
