# backend/src/app/interfaces/IExchangeApi.ts
@@ -1,0 +1,13 @@
+export interface IExchangeApiResponse {
+  success: boolean
+  timestamp: number
+  base: string
+  date: string
+  rates: Array<{
+    [currency: string]: number
+  }>
+}
+
+export interface IExchangeApi {
+  getCurrentExchangeRate: () => Promise<IExchangeApiResponse>
+}
